--- a/http/mock-server/tsconfig.json
+++ b/http/mock-server/tsconfig.json
@@ -7,8 +7,12 @@
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "skipLibCheck": true,
-    "types": ["node"]
-  },
+    "allowImportingTsExtensions": true,
+    "types": [
+      "node"
+    ],
+    "baseUrl": ".",
+    "paths": { "@/*": ["src/*"] }  },
   "include": ["src/**/*.ts"],
   "exclude": ["node_modules"]
 }
